# epos

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  conanfile.txt  license.txt  readme.md
res/: icon.afdesign  notes.md
res/fonts/: Roboto.txt
src/: main.cpp  main.rc
src/epos/: chrono.hpp  clock.hpp  com.hpp  enum.hpp  error.cpp  error.hpp  fonts.cpp  fonts.hpp  input.cpp  input.hpp  overlay.cpp  overlay.hpp  runtime.cpp  runtime.hpp  signature.cpp  signature.hpp  text.hpp  timer.hpp  token.hpp  window.cpp  window.hpp
src/epos/overlay/: overwatch.cpp  overwatch.hpp
src/epos/overwatch/: game.cpp  game.hpp  hero.cpp  predict.cpp  view.cpp  view.hpp
